# financial_toolkit

./: readme.md
account_dashboard_banner/: COMO_USAR_OPERACIONES_MATEMATICAS.md  EXTENDED_KPI_SYSTEM.md  INTERFAZ_VISUAL_GUIA.md  README.rst  __init__.py  __manifest__.py  post_install.py
account_internal_transfer/: __manifest__.py
account_invoice_line_default_account/: MIGRATION_NOTES.md  README.md  README.rst  __init__.py  __manifest__.py
account_move_template/: README.rst  __manifest__.py
bank_reconcile_receipts/: README.md  __manifest__.py
card_credit_management/: CHANGELOG.md  ERROR_FIX_SUMMARY.md  INSTALL.md  MARKETPLACE_READY.md  README.md  TECHNICAL_DOCS.md  __init__.py  __manifest__.py  icon_design_specs.md
credit_card_journal/: ENDING_BALANCE_FIX.md  README.md  VALIDATION_FLOW.md  __manifest__.py
financial_toolkit/: README.md  __init__.py  __manifest__.py
inventory_adjustment_custom_account/: __manifest__.py  readme.md
inventory_price_adjustmen_account/: __manifest__.py
journal_partner_restriction/: README.md  TECHNICAL.md  __manifest__.py
liquidity_journal_actions/: __init__.py  __manifest__.py
partner_assigment/: __init__.py  __manifest__.py  hooks.py  pyproject.toml
partner_assigment/data/: cleanup_actions.xml
partner_assigment/models/: account_account.py  res_partner.py
partner_assigment/security/: ir.model.access.csv
partner_assigment/tests/: __init__.py
partner_assigment/views/: account_account_views.xml  res_partner_views.xml  wizard_views.xml
partner_assigment/wizard/: __init__.py  account_partner_assignment_wizard.py
(+247 files in other folders)
